Use lodash instead of underscore.

--- a/test/index.html
+++ b/test/index.html
@@ -10,8 +10,8 @@
     <div id="mocha"></div>
     <script src="../node_modules/chai/chai.js"></script>
     <script src="../node_modules/mocha/mocha.js"></script>
-    <script src="../node_modules/underscore/underscore.js"></script>
-    <script src="../lib/underscore.inflection.js"></script>
+    <script src="../node_modules/lodash/lodash.js"></script>
+    <script src="../lib/lodash.inflection.js"></script>
     <script>
       // Make `expect` available
       expect = chai.expect;
