--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,7 @@
     <script src="../node_modules/chai/chai.js"></script>
     <script src="../node_modules/mocha/mocha.js"></script>
     <script src="../node_modules/lodash/lodash.js"></script>
-    <script src="../lib/lodash.inflection.js"></script>
+    <script src="../lib/lodash-inflection.js"></script>
     <script>
       // Make `expect` available
       expect = chai.expect;
